# uh-core

./: .cmake-format.yaml  .editorconfig  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ChangeLog.md  Dockerfile  README.md  benchmark.sh  benchmark_container.sh  benchmark_host.sh  docker-compose-integration.yml  docker-compose.yml  docker-swarm.yml  docker_build.sh  mkdoc.sh  prometheus.yml  tsan-suppressions  wait_for_benchmark.py
client-sdk/: CMakeLists.txt
client-sdk/examples/: directory_backup.cpp  simple_example.cpp
client-sdk/include/: udb.h  ultidb.h
client-sdk/src/: ultidb.cpp
client-shell/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md  client_shell_ver.h.in  start.sh
client-shell/doc/: usage.md
client-shell/src/: Block.cpp  Block.h  Data.cpp  Data.h  EnDecoder.h  Prefix.cpp  Prefix.h  Recompilation.cpp  Recompilation.h  config.h.in  config.hpp.in  main.cpp  project_config.h  project_config.h.in
client-shell/test/: testDummy.cpp  testRunner.cpp  test_recomp_tree.cpp  test_traverse.cpp
cluster/: CMakeLists.txt  main.cpp
cluster/test/: testRunner.cpp  test_bucket.cpp  test_chaining_data_store.cpp  test_data_store.cpp  test_directory_store.cpp  test_serialization.cpp  test_transaction_log.cpp
cmake/testing/: CMakeLists.txt
lib/: .gitignore  CMakeLists.txt  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md
lib/chunking/: CMakeLists.txt  buffer.cpp  buffer.h  chunker.h  defaults.h  fast_cdc.cpp  fast_cdc.h  fixed_size_chunker.cpp  fixed_size_chunker.h  gear.cpp  gear.h  mod_chunker.cpp  mod_chunker.h  rabin_fingerprints_chunker.cpp  rabin_fingerprints_chunker.h  rabin_fp.cpp  rabin_fp.h  rabin_polynomial.c  rabin_polynomial.h  rabin_polynomial_constants.h
lib/client/: upload.cpp  upload.h
lib/compression/: CMakeLists.txt
lib/conceptTypes/: CMakeLists.txt  conceptTypes.h
lib/dbSupport/: CMakeLists.txt  config_files.cpp  config_files.h  containerSQL.h  database_call_ops.cpp  global_custom_functions.h  postgresSQL.cpp  postgresSQL.h
lib/io/: CMakeLists.txt  count.cpp  count.h  device.cpp  device.h  file.cpp  file.h  seekable_device.h  temp_file.cpp  temp_file.h
lib/licensing/: CMakeLists.txt  backend.h  common.h  config.h  demo_license.cpp  demo_license.h  features.cpp  features.h  license_package.cpp  license_package.h  license_spring.cpp  license_spring.h  licensing_config.h.in
lib/logging/: CMakeLists.txt  custom_exceptions.h  logging_boost.cpp  logging_boost.h
lib/metrics/: CMakeLists.txt  protocol_metrics.cpp  protocol_metrics.h  service.cpp
lib/net/: CMakeLists.txt  connection.cpp  connection.h  plain_server.cpp  plain_server.h  plain_socket.cpp  plain_socket.h  scheduler.cpp  scheduler.h  server.cpp  server.h  socket.cpp  socket.h  tls_server.cpp  tls_server.h  tls_socket.cpp  tls_socket.h
lib/network/: CMakeLists.txt  net_client.h  net_common.h  net_connection.h  net_message.h  net_queue_ts.h  net_server.h  net_uhcustom.h  server.key  server.pem  simple_client.cpp  simple_server.cpp
lib/numbers/: BigBasicsCustom.h  BigInteger.h  BigIntegerCustom.h  BigIntegerGMP.h  CMakeLists.txt
lib/options/: CMakeLists.txt  README.md  app_config.cpp  app_config.h  basic_options.cpp  basic_options.h  basic_options.hpp  config_file.cpp  config_file.h  licensing_options.cpp  licensing_options.h  loader.cpp  loader.h  logging_options.cpp  logging_options.h  options.cpp  options.h  server_options.cpp
lib/protocol/: CMakeLists.txt  client.cpp  client.h  client_factory.cpp  client_factory.h  client_pool.cpp  client_pool.h  common.h  exception.h  messages.cpp  messages.h  protocol.h  read_block_device.cpp  read_block_device.h  request_interface.h  serializer.cpp  serializer.h  server.cpp  server.h
lib/serialization/: Data.h
lib/signals/: CMakeLists.txt  signal.cpp  signal.h
lib/statistics/: CMakeLists.txt  hashLibraries.h  valueRangesDouble.h  valueRangesSingle.h
lib/uhv/: CMakeLists.txt  f_meta_data.cpp  f_meta_data.h  f_serialization.cpp  meta_data.cpp  meta_data.h
lib/util/: CMakeLists.txt  exception.cpp  exception.h  factory.h  recomp_tree.h  sha512.cpp  sha512.h  structured_queries.cpp  structured_queries.h  temp_file.cpp  temp_file.h
server-agency/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md  start.sh
server-agency/doc/: agency_node.lic  usage.md
server-agency/src/: CMakeLists.txt  config.hpp.in  connection.h  main.cpp  metrics.cpp  metrics.h  options.cpp  options.h  protocol.cpp  protocol.h  protocol_factory.cpp  protocol_factory.h  scheduler.cpp  scheduler.h  server.cpp  server.h
server-agency/test/: testDummy.cpp
server-db/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  README.md  start.sh
server-db/doc/: data_node.lic  (+1 more)
src/: CMakeLists.txt  config.h.in  main.cpp
test/: CMakeLists.txt  cluster_fixture.h  fakeit.hpp  gdv_fixture.h  test_address.cpp  test_awaitable_promise.cpp  test_big_int.cpp  test_bucket.cpp  test_chaining_data_store.cpp  test_config.h.in  test_data_store.cpp  test_dedupe_write_cache.cpp  test_directory_store.cpp  test_ec.cpp  test_etcd.cpp  test_etcd_manager.cpp  test_etcd_manager_on_client_failure.cpp  test_fake_data_store.cpp  test_fragment_set.cpp  test_free_spot_manager.cpp  test_global_data_view.cpp  test_http_range.cpp  test_lfu_cache.cpp  test_license.cpp  test_lru_cache.cpp  test_md5.cpp  test_plain_cache.cpp  test_policies.cpp  test_policies_with_action.cpp  test_policies_with_condition.cpp  test_policies_with_examples.cpp  test_pool.cpp  test_promise_future.cpp  test_read_cache.cpp  test_reference_counter.cpp  test_scoped_buffer.cpp  test_serialization.cpp  test_service_registry.cpp  test_services.cpp  test_strings.cpp  (+3 more)
testing/: CMakeLists.txt  Dockerfile  ceph-s3tests.conf.in  docker-compose.yml  docker-compose.yml.in  pytest.ini.in  start-e2e.sh  start-e2e.sh.in
tools/: CMakeLists.txt  dedupe_stats.py
(+1299 files in other folders)
